[package]
name = "s3_fuse"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.79.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
fuse3 = { version = "0.8.1", "features" = ["tokio-runtime", "unprivileged"] }
futures-util = "0.3.30"
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3.18", features = [
	"env-filter",
	"registry",
] }
bytes = "1.5"
libc = "0.2.168"
mio = { version = "0.8.11", features = ["os-poll"] }
